# sortvis

./: CMakeLists.txt
shaders/: dot_frag.glsl  dot_geom.glsl  dot_vert.glsl  hist_frag.glsl  hist_geom.glsl  hist_vert.glsl  line_frag.glsl  line_vert.glsl  pie_frag.glsl  pie_geom.glsl  pie_vert.glsl
src/: main.cpp  shader.cpp  shader.hpp  sort_ctx.cpp  sort_ctx.hpp
